Fix header spacing before code chunks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,7 +154,10 @@ blockquote+h2,
 blockquote+h3,
 .highlight+h1,
 .highlight+h2,
-.highlight+h3 {
+.highlight+h3,
+.gatsby-highlight+h1,
+.gatsby-highlight+h2,
+.gatsby-highlight+h3 {
     margin-top: 2.5rem
 }
 
